--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "yozora-vue",
-  "private": true,
-  "version": "0.1.0",
+  "version": "0.1.2",
   "type": "module",
   "files": [
     "dist"
   ],
-  "main": "./dist/yozora-vue.umd.js",
-  "module": "./dist/yozora-vue.esm.js",
-  "types": "./dist/yozora-vue.d.ts",
+  "main": "./dist/yozora-vue.umd.cjs",
+  "module": "./dist/yozora-vue.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/yozora-vue.esm.js",
-      "require": "./dist/yozora-vue.js"
+      "import": "./dist/yozora-vue.js",
+      "require": "./dist/yozora-vue.umd.cjs"
     }
   },
   "keywords": [
@@ -31,7 +30,8 @@
     "preview": "vite preview"
   },
   "peerDependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
