--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "yozora-vue",
-  "version": "0.1.3",
+  "version": "0.3.0",
   "type": "module",
   "files": [
     "dist"
   ],
+  "license": "MIT",
   "main": "./dist/yozora-vue.umd.cjs",
   "module": "./dist/yozora-vue.js",
   "types": "./dist/index.d.ts",
