--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "preview": "vite preview"
   },
   "peerDependencies": {
-    "tailwindcss": "^3.*",
+    "tailwindcss": ">=3.0.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
