refactor: update version and update index.ts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yozora-vue",
-  "version": "0.7.2",
+  "version": "0.8.1",
   "type": "module",
   "files": [
     "dist"
@@ -26,6 +26,7 @@
     "component",
     "library",
     "tailwindcss",
+    "tailwind",
     "yozora",
     "yozora-vue",
     "yozora vue",
