--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yozora-vue",
-  "version": "0.11.8",
+  "version": "0.11.9",
   "type": "module",
   "files": [
     "dist"
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MasProxy/yozora-vue.git"
+    "url": "git+https://github.com/MasProxy/yozora-vue.git"
   },
   "keywords": [
     "vue",
